--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,16 @@ edition = "2018"
 
 [features]
 server = []
+headless = []
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-# [profile.dev.package."*"]
-# opt-level = 3
+[profile.dev.package."*"]
+opt-level = 3
 
 [dependencies]
 rg3d = "0.19.0"
+laminar = "0.5"
+# crossbeam-channel = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3.3"
