--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,6 @@ opt-level = 3
 [dependencies]
 rg3d = "0.19.0"
 laminar = "0.5"
-# crossbeam-channel = "0.5"
+crossbeam-channel = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3.3"
