--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ laminar = "0.5"
 crossbeam-channel = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.3.3"
+serde_json = "1.0"
