--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [features]
 server = []
+console = []
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -16,6 +17,6 @@ opt-level = 3
 rg3d = "0.19.0"
 laminar = "0.5"
 crossbeam-channel = "0.5"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version="1.0", features=["derive"] }
 bincode = "1.3.3"
 serde_json = "1.0"
